# PowerPipeline

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
deployment/openwebui-tools/: residentai_powerpipeline_tool.py
deployment/systemd/: powerpipeline-household-bridge.service.template  powerpipeline-household-bridge.timer.template  powerpipeline-quality-check.service.template  powerpipeline-quality-check.timer.template  powerpipeline-spp-ingest.service.template  powerpipeline-spp-ingest.timer.template
docs/: ARCHITECTURE.md  DATA_LINEAGE.md  DECISION_LOG.md  EXISTING_COMPONENT_REUSE.md  FAILURE_SCENARIOS.md  FUTURE_ARCHITECTURE.md  INTERVIEW_DEMO.md  MVP_AUTONOMY_PROFILE.md  MVP_CHARTER.md  NORTH_STAR.md  OPERATIONS.md  SECURITY_AND_AUTHORITY.md  SOURCE_REGISTRY.md
fixtures/solar_forecast/: solar_production_projection_2026-01-01.json
implementation/: BLOCKERS.yaml  CURRENT_STATUS.yaml  EXECUTION_HISTORY.yaml  FUTURE_BACKLOG.yaml  MVP_ACCEPTANCE_CRITERIA.yaml  MVP_AUTONOMY_PROFILE.yaml  WORK_QUEUE.yaml
scripts/: run_household_bridge.sh  run_quality_sweep.sh  run_spp_ingest.sh
sql/: schema.sql  views.sql
src/powerpipeline/: __init__.py  db.py  demo.py  export.py  (+2 more)
tests/: conftest.py  test_enphase_bridge_revision.py  test_export.py  test_failure_recovery.py  test_household_bridges.py  test_household_contracts.py  test_missing_interval_detection.py  test_openwebui_tool_script.py  test_pipeline_curated.py  test_quality_sweep.py  test_residentai_tool.py  test_spp_load_ingest.py  test_spp_mtlf_contract.py  test_weather_bridge_evolving_day.py
(+16 files in other folders)
