[project]
name = "powerpipeline"
version = "0.1.0"
description = "ResidentAI regional + household energy data pipeline (SPP, Enphase, weather)"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "pandera>=0.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
